<resources>
    <string name="app_name">Habit Trainer</string>
    <string name="water_desc">A refreshing water</string>
    <string name="drink_water">Drink Water</string>
    <string name="habit_icon">Habit Icon</string>
    <string name="begin_new_habit">Begin new Habit…</string>
    <string name="image_preview">Image Preview</string>
    <string name="choose_image">Choose image…</string>
    <string name="eat_a_apple">Eat a apple</string>
    <string name="an_apple_a_day_keeps_the_doctor_away">An apple a day keeps the doctor away</string>
    <string name="save_image">Save Image</string>
</resources>
