<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".CreateHabitActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_title"
        android:hint="@string/eat_a_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_desc"
        android:hint="@string/an_apple_a_day_keeps_the_doctor_away"
        android:inputType="textMultiLine"
        android:lines="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_choose_image"
        android:text="@string/choose_image"
        android:onClick="chooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_preview" />

    <Button
        android:id="@+id/button_save"
        android:onClick="storeHabit"
        android:text="@string/save_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_error"
        android:visibility="invisible"
        android:textColor="#e53935"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>